<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@id/dashboardFragment"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/dashboard_title" />
    <item
        android:id="@id/animalLedgerFragment"
        android:icon="@drawable/ic_ledger"
        android:title="@string/ledger_title" />
    <item
        android:id="@id/vaccineCalendarFragment"
        android:icon="@drawable/ic_calendar"
        android:title="@string/calendar_title" />
    <item
        android:id="@id/diseaseReportFragment"
        android:icon="@drawable/ic_report"
        android:title="@string/disease_title" />
    <item
        android:id="@id/paymentHistoryFragment"
        android:icon="@drawable/ic_payment"
        android:title="@string/payment_nav_title" />
    <item
        android:id="@id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile_title" />
</menu>
